Use PCH generated from VPC globally
This reduced output code size with 40KiB, improved compile times and appeared to improve runtime performance as well.

--- a/r5dev/datacache/CMakeLists.txt
+++ b/r5dev/datacache/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "lib" "datacache" "tier0" ${FOLDER_CONTEXT} )
+add_module( "lib" "datacache" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
