--- a/r5dev/codecs/CMakeLists.txt
+++ b/r5dev/codecs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "lib" "codecs" "tier0" ${FOLDER_CONTEXT} )
+add_module( "lib" "codecs" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
