Add option for GameDLL version and source directory
Options could be set from the CMake GUI. By default, GameDLL version is set to 'GAMEDLL_S3', and engine source directory is set to 'r5dev/'.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ include( "r5dev/cmake/Macros.cmake" )
 include( "r5dev/cmake/Options.cmake" )
 
 initial_setup()
-define_compiler_variables()
 setup_build_configurations()
+define_compiler_variables()
 apply_project_settings()
 
-include_directories( ${ENGINE_SOURCE_DIR} )
-include_directories( ${ENGINE_SOURCE_DIR}/public )
-include_directories( ${ENGINE_SOURCE_DIR}/thirdparty )
+include_directories( "${ENGINE_SOURCE_DIR}" )
+include_directories( "${ENGINE_SOURCE_DIR}/public" )
+include_directories( "${ENGINE_SOURCE_DIR}/thirdparty" )
 
 # Include the subdirectories that contain the individual projects
-add_subdirectory( ${ENGINE_SOURCE_DIR} )
+add_subdirectory( "${ENGINE_SOURCE_DIR}" )
