--- a/r5dev/networksystem/CMakeLists.txt
+++ b/r5dev/networksystem/CMakeLists.txt
@@ -3,13 +3,16 @@ add_module( "lib" "networksystem" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
-add_sources( SOURCE_GROUP "Core"
+add_sources( SOURCE_GROUP "Private"
     "bansystem.cpp"
     "bansystem.h"
     "listmanager.cpp"
     "listmanager.h"
     "pylon.cpp"
     "pylon.h"
+)
+
+add_sources( SOURCE_GROUP "Public"
     "serverlisting.h"
     "sm_protocol.h"
 )
