--- a/r5dev/pluginsystem/CMakeLists.txt
+++ b/r5dev/pluginsystem/CMakeLists.txt
@@ -3,12 +3,15 @@ add_module( "lib" "pluginsystem" "vpc" ${FOLDER_CONTEXT} )
 
 start_sources()
 
-add_sources( SOURCE_GROUP "Core"
-    "ipluginsystem.h"
+add_sources( SOURCE_GROUP "Private"
     "modsystem.cpp"
     "modsystem.h"
     "pluginsystem.cpp"
     "pluginsystem.h"
+)
+
+add_sources( SOURCE_GROUP "Public"
+    "ipluginsystem.h"
 )
 
 end_sources()
