--- a/r5dev/vscript/CMakeLists.txt
+++ b/r5dev/vscript/CMakeLists.txt
@@ -11,14 +11,24 @@ add_sources( SOURCE_GROUP "Private"
 add_sources( SOURCE_GROUP "Squirrel_RE"
     "languages/squirrel_re/vsquirrel.cpp"
     "languages/squirrel_re/vsquirrel.h"
+)
+
+add_sources( SOURCE_GROUP "Squirrel_RE/squirrel"
+    "languages/squirrel_re/squirrel/sqapi.cpp"
+    "languages/squirrel_re/squirrel/sqvm.cpp"
+)
+
+add_sources( SOURCE_GROUP "Squirrel_RE/sqstdlib"
+    "languages/squirrel_re/sqstdlib/sqstdaux.cpp"
+)
+
+add_sources( SOURCE_GROUP "Squirrel_RE/include"
+    "languages/squirrel_re/vsquirrel.cpp"
+    "languages/squirrel_re/vsquirrel.h"
     "languages/squirrel_re/include/sqstate.h"
     "languages/squirrel_re/include/sqstdaux.h"
     "languages/squirrel_re/include/squirrel.h"
     "languages/squirrel_re/include/sqvm.h"
-
-    "languages/squirrel_re/sqstdlib/sqstdaux.cpp"
-    "languages/squirrel_re/squirrel/sqapi.cpp"
-    "languages/squirrel_re/squirrel/sqvm.cpp"
 )
 
 add_sources( SOURCE_GROUP "Public"
