--- a/r5dev/pluginsystem/CMakeLists.txt
+++ b/r5dev/pluginsystem/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "lib" "pluginsystem" "vpc" ${FOLDER_CONTEXT} )
+add_module( "lib" "pluginsystem" "vpc" ${FOLDER_CONTEXT} TRUE )
 
 start_sources()
 
