--- a/r5dev/naveditor/CMakeLists.txt
+++ b/r5dev/naveditor/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "exe" "naveditor" "" ${FOLDER_CONTEXT} )
+add_module( "exe" "naveditor" "" ${FOLDER_CONTEXT} TRUE )
 
 start_sources()
 
