Add all public headers to CMake projects
Added all public headers to CMake projects, also moved some files around in the public directory. Translation units have been moved to the libraries that were responsible for implementing them, as this game is monolithic.

--- a/r5dev/CMakeLists.txt
+++ b/r5dev/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory( materialsystem )
 add_subdirectory( inputsystem )
 add_subdirectory( filesystem )
 add_subdirectory( datacache )
+add_subdirectory( studiorender )
 add_subdirectory( localize )
 add_subdirectory( engine )
 add_subdirectory( vguimatsurface )
