--- a/r5dev/tier1/CMakeLists.txt
+++ b/r5dev/tier1/CMakeLists.txt
@@ -30,6 +30,9 @@ file( GLOB TIER1_PUBLIC_HEADERS
 )
 add_sources( SOURCE_GROUP "Public"
     "${TIER1_PUBLIC_HEADERS}"
+    "${ENGINE_SOURCE_DIR}/public/iconcommand.h"
+    "${ENGINE_SOURCE_DIR}/public/iconvar.h"
+    "${ENGINE_SOURCE_DIR}/public/icvar.h"
 )
 
 end_sources()
