Add AVI public headers to CMakeLists

--- a/r5dev/codecs/CMakeLists.txt
+++ b/r5dev/codecs/CMakeLists.txt
@@ -15,6 +15,11 @@ add_sources( SOURCE_GROUP "Miles"
     "miles/radshal_wasapi.h"
 )
 
+add_sources( SOURCE_GROUP "Public"
+    "${ENGINE_SOURCE_DIR}/public/avi/iavi.h"
+    "${ENGINE_SOURCE_DIR}/public/avi/ibik.h"
+)
+
 end_sources()
 
 target_include_directories( ${PROJECT_NAME} PRIVATE "${ENGINE_SOURCE_DIR}/tier0/" "${ENGINE_SOURCE_DIR}/tier1/" )
