Fix server code crasher in 'FireWeaponBolt'
The function 'FireWeaponBolt' calls 'CreateWeaponBolt' to create a bolt entity, but it can return NULL. 'FireWeaponBolt' does NOT check for NULL and derefs the pointer regardless. This rarely happens though; in all cases, it was caused by a defect in scripts. Code has been hooked to throw an engine error instead of crashing.

--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -26,6 +26,11 @@ add_sources( SOURCE_GROUP "Shared"
     "shared/vscript_shared.h"
 )
 
+add_sources( SOURCE_GROUP "Shared/Weapon"
+    "shared/r1/weapon_bolt.cpp"
+    "shared/r1/weapon_bolt.h"
+)
+
 add_sources( SOURCE_GROUP "Server"
     "server/ai_network.cpp"
     "server/ai_network.h"
