Fix >190FPS input system/simulation problems
Function 'CL_Move' has been fully rebuild in the SDK. Originally, the game checked if the delta time exceeded an amount defined by an immediate value, and dropped usercmd's if that was the case. This logic has been replaced with a more dynamic solution, and the console variable regulating this ('fps_input_max') is set to 200.0 by default (the same as the fix applied in the Season 9.1 Genesis update). This function also has been slightly optimized by removing duplicate operations that were performed in the original function. A second fix has been applied to 'CInput::JoyStickApplyMovement' that was also found changed in the Season 9.1 Genesis executable. In that function, an extraneous clamp was performed on the frame time causing viewstick problems when usercmd's get dropped in CL_Move.

--- a/r5dev/engine/CMakeLists.txt
+++ b/r5dev/engine/CMakeLists.txt
@@ -117,6 +117,7 @@ add_sources( SOURCE_GROUP "Client"
     "client/cdll_engine_int.h"
     "client/cl_ents_parse.cpp"
     "client/cl_ents_parse.h"
+    "client/cl_main.cpp"
     "client/cl_main.h"
     "client/cl_splitscreen.cpp"
     "client/cl_splitscreen.h"
