Implement 'SVC_UserMessage' print handler properly
Check if the actual message type is 'TextMsg' before printing, since other data is binary and could be read as 'HUD_PRINTCONSOLE', 'HUD_PRINTCENTER', etc.. resulting in printing binary data. This fix permanently solves that problem. The check has also been applied to the 'ShouldReplayMessage' function.

--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -21,6 +21,7 @@ add_sources( SOURCE_GROUP "Shared"
     "shared/takedamageinfo.h"
     "shared/usercmd.cpp"
     "shared/usercmd.h"
+    "shared/usermessages.h"
     "shared/util_shared.cpp"
     "shared/util_shared.h"
     "shared/vscript_shared.cpp"
