CModule and CMemory class improvements
This commit significantly reduces output code size, and a noticeable increase in performance. Changes are:
- Removed all extraneous std::string and std::vector copy constructions; use raw pointers instead to boost performance.
- Marked simple getters in CModule inline.
- Marked several functions in CModule const.
- Slightly reordered CModule class.
- 'CMemory::CheckOpCodes' and 'CMemory::Patch' now take a const reference.

--- a/r5dev/tier0/CMakeLists.txt
+++ b/r5dev/tier0/CMakeLists.txt
@@ -34,6 +34,10 @@ add_sources( SOURCE_GROUP "Runtime"
     "binstream.cpp"
 )
 
+add_sources( SOURCE_GROUP "Windows"
+    "${ENGINE_SOURCE_DIR}/windows/tebpeb64.h"
+)
+
 file( GLOB TIER0_PUBLIC_HEADERS
     "${ENGINE_SOURCE_DIR}/public/tier0/*"
 )
