--- a/r5dev/pluginsdk/CMakeLists.txt
+++ b/r5dev/pluginsdk/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "shared_lib" "PluginSDK" "vpc" ${FOLDER_CONTEXT} TRUE )
+add_module( "shared_lib" "PluginSDK" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 
 start_sources()
 
