--- a/r5dev/protoc/CMakeLists.txt
+++ b/r5dev/protoc/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "lib" "SigCache_Pb" "vpc" ${FOLDER_CONTEXT} FALSE )
+add_module( "lib" "SigCache_Pb" "vpc" ${FOLDER_CONTEXT} FALSE TRUE )
 
 start_sources()
 
@@ -11,7 +11,7 @@ add_sources( SOURCE_GROUP "Runtime"
 end_sources()
 thirdparty_suppress_warnings()
 
-add_module( "lib" "SV_RCon_Pb" "vpc" ${FOLDER_CONTEXT} FALSE )
+add_module( "lib" "SV_RCon_Pb" "vpc" ${FOLDER_CONTEXT} FALSE TRUE )
 
 start_sources()
 
@@ -23,7 +23,7 @@ add_sources( SOURCE_GROUP "Runtime"
 end_sources()
 thirdparty_suppress_warnings()
 
-add_module( "lib" "CL_RCon_Pb" "vpc" ${FOLDER_CONTEXT} FALSE )
+add_module( "lib" "CL_RCon_Pb" "vpc" ${FOLDER_CONTEXT} FALSE TRUE )
 
 start_sources()
 
