--- a/r5dev/sdklauncher/CMakeLists.txt
+++ b/r5dev/sdklauncher/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 3.16 )
-add_module( "exe" "sdklauncher" "" ${FOLDER_CONTEXT} TRUE )
+add_module( "exe" "sdklauncher" "" ${FOLDER_CONTEXT} TRUE TRUE )
 
 start_sources()
 
