Improve CClient class structure
* Added structure for send/recv datablocks vtable.
* Mapped out CClient structure more.
* Fixed incorrect tick member offsets for CClient.

--- a/r5dev/engine/CMakeLists.txt
+++ b/r5dev/engine/CMakeLists.txt
@@ -45,7 +45,6 @@ endif()
 add_sources( SOURCE_GROUP "Network"
     "dt_recv.cpp"
     "datamap.cpp"
-    "datablock.h"
     "framesnapshot.h"
     "net.cpp"
     "net.h"
@@ -110,6 +109,8 @@ add_sources( SOURCE_GROUP "Server"
     "server/sv_rcon.h"
     "server/vengineserver_impl.cpp"
     "server/vengineserver_impl.h"
+    "server/datablock_sender.cpp"
+    "server/datablock_sender.h"
 )
 
 add_sources( SOURCE_GROUP "Client"
@@ -119,6 +120,8 @@ add_sources( SOURCE_GROUP "Client"
     "client/cl_ents_parse.h"
     "client/client.cpp"
     "client/client.h"
+    "client/datablock_receiver.cpp"
+    "client/datablock_receiver.h"
 )
 
 add_sources( SOURCE_GROUP "Shared"
@@ -196,6 +199,7 @@ add_sources( SOURCE_GROUP "Public"
     "${ENGINE_SOURCE_DIR}/public/dt_send.h"
     "${ENGINE_SOURCE_DIR}/public/dt_recv.h"
     "${ENGINE_SOURCE_DIR}/public/datamap.h"
+    "${ENGINE_SOURCE_DIR}/public/idatablock.h"
     "${ENGINE_SOURCE_DIR}/public/idebugoverlay.h"
     "${ENGINE_SOURCE_DIR}/public/iengine.h"
     "${ENGINE_SOURCE_DIR}/public/igame.h"
