--- a/r5dev/naveditor/CMakeLists.txt
+++ b/r5dev/naveditor/CMakeLists.txt
@@ -85,9 +85,14 @@ add_sources( SOURCE_GROUP "Utils/Include"
     "include/ValueHistory.h"
 )
 
-end_sources( "game/bin/" )
+end_sources( "${BUILD_OUTPUT_DIR}/bin/" )
 whole_program_optimization()
 
+set_target_properties( ${PROJECT_NAME} PROPERTIES
+    VS_DEBUGGER_COMMAND "naveditor.exe"
+    VS_DEBUGGER_COMMAND_ARGUMENTS "-console"
+    VS_DEBUGGER_WORKING_DIRECTORY "$(ProjectDir)../../../${BUILD_OUTPUT_DIR}/bin/"
+)
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "WIN32"
 )
