Internal memalloc replacement
This commit replaces the standard memalloc system with that of the game. This means we can share the same allocated memory objects between the game and SDK without having to use 'MemAllocSingleton()' and manually call the constructors/destructors. This also means we can create ConVar's and ConCommands in the global scope, and a bunch more cool stuff. The explanation in 'r5dev\loader\loader.cpp' documents the new loading system.

--- a/r5dev/CMakeLists.txt
+++ b/r5dev/CMakeLists.txt
@@ -57,6 +57,7 @@ add_subdirectory( localize )
 add_subdirectory( engine )
 add_subdirectory( vguimatsurface )
 add_subdirectory( vgui )
+add_subdirectory( loader )
 
 set( FOLDER_CONTEXT "Plugins" )
 add_subdirectory( pluginsdk )
