Make memoverride a separate lib
Else everything linked against tier0 will have to use the game's memalloc implementation, which requires it to run with the game process. Only limit this to DLL's that run with the game process.

--- a/r5dev/pluginsdk/CMakeLists.txt
+++ b/r5dev/pluginsdk/CMakeLists.txt
@@ -14,13 +14,16 @@ end_sources( "${BUILD_OUTPUT_DIR}/bin/x64_retail/plugins/" )
 
 target_link_libraries( ${PROJECT_NAME} PRIVATE
     "tier0"
+    "memoverride"
+
     "libdetours"
     "libprotobuf"
     "liblzham"
     "libspdlog"
-    "SigCache_PB"
-    "SV_RCon_PB"
-    "CL_RCon_PB"
+
+    "SigCache_Pb"
+    "SV_RCon_Pb"
+    "CL_RCon_Pb"
     "Rpcrt4.lib"
 )
 
