--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
     "Rpcrt4.lib"
 
     "vpc"
+    "memoverride"
     "tier0"
     "tier1"
     "tier2"
