--- a/r5dev/pluginsdk/CMakeLists.txt
+++ b/r5dev/pluginsdk/CMakeLists.txt
@@ -13,8 +13,8 @@ add_sources( SOURCE_GROUP "Core"
 end_sources( "${BUILD_OUTPUT_DIR}/bin/x64_retail/plugins/" )
 
 target_link_libraries( ${PROJECT_NAME} PRIVATE
-    "tier0"
     "memoverride"
+    "tier0"
 
     "libdetours"
     "libprotobuf"
@@ -29,4 +29,14 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
 
 target_link_options( ${PROJECT_NAME} PRIVATE
     "/STACK:8000000" # Match game executable stack reserve size
+
+    # The only reason this has to be done, is because
+    # the _xxxx_dbg malloc functions could otherwise
+    # throw a linker error, as they are already defined
+    # in the CRT library, but there doesn't seem to be
+    # a standard way to override these, unlike the
+    # _xxxx_base malloc functions. Since this is only
+    # relevant for debug builds, this linker flag should
+    # only be toggled for DEBUG builds!!!
+    "/FORCE:MULTIPLE"
 )
