Fix unresolved external symbol errors for loader.dll
Moved CModule statics to a separate translation unit, preventing the linker to link unused stuff into the loader module, thus allowing us to drop the linkage of unused libraries.

--- a/r5dev/tier0/CMakeLists.txt
+++ b/r5dev/tier0/CMakeLists.txt
@@ -37,6 +37,7 @@ add_sources( SOURCE_GROUP "Runtime"
     "jobthread.cpp"
     "memaddr.cpp"
     "module.cpp"
+    "module_statics.cpp"
     "platform.cpp"
     "sigcache.cpp"
     "threadtools.cpp"
