Make fbits inline, and add PopCount
Floating point bitwise functions are now inline, also implemented a 'PopCount' function, which replicates the '__popcnt' instruction, but does not require the CPU to feature the instruction. This was mainly added as the SDK launcher doesn't check the CPU for SSSe3/popcnt, as it doesn't involve any instruction sets past SSE2.

--- a/r5dev/mathlib/CMakeLists.txt
+++ b/r5dev/mathlib/CMakeLists.txt
@@ -43,7 +43,7 @@ add_sources( SOURCE_GROUP "Vector"
 
 add_sources( SOURCE_GROUP "Math"
     "almostequal.cpp"
-    "fbits.cpp"
+    "bits.h"
     "fbits.h"
     "math_pfns.h"
     "mathlib.h"
