--- a/r5dev/sdklauncher/CMakeLists.txt
+++ b/r5dev/sdklauncher/CMakeLists.txt
@@ -26,7 +26,7 @@ set_target_properties( ${PROJECT_NAME} PROPERTIES OUTPUT_NAME
 )
 set_target_properties( ${PROJECT_NAME} PROPERTIES
     VS_DEBUGGER_COMMAND "launcher.exe"
-    VS_DEBUGGER_WORKING_DIRECTORY "$(ProjectDir)../../../${BUILD_OUTPUT_DIR}/bin/"
+    VS_DEBUGGER_WORKING_DIRECTORY "$(ProjectDir)../../../${BUILD_OUTPUT_DIR}/"
 )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "SDKLAUNCHER"
