Fixup exec paths in 'build_all_vpk.cfg'
Point to new location that changed in commit afb09e1d.

--- a/r5dev/resource/cfg/tools/build_all_vpk.cfg
+++ b/r5dev/resource/cfg/tools/build_all_vpk.cfg
@@ -1,2 +1,2 @@
-exec "englishserver_build_vpk.cfg"
-exec "englishclient_build_vpk.cfg"
+exec "tools/englishserver_build_vpk.cfg"
+exec "tools/englishclient_build_vpk.cfg"
