Rename command 'fs_vpk_build' --> 'fs_vpk_pack'

--- a/r5dev/resource/cfg/tools/englishclient_build_vpk.cfg
+++ b/r5dev/resource/cfg/tools/englishclient_build_vpk.cfg
@@ -1,15 +1,15 @@
-fs_vpk_build "english" "client" "frontend" "1"
-fs_vpk_build "english" "client" "mp_common" "1"
-fs_vpk_build "english" "client" "mp_rr_aqueduct" "1"
-fs_vpk_build "english" "client" "mp_rr_aqueduct_night" "1"
-fs_vpk_build "english" "client" "mp_rr_arena_composite" "1"
-fs_vpk_build "english" "client" "mp_rr_arena_skygarden" "1"
-fs_vpk_build "english" "client" "mp_rr_ashs_redemption" "1"
-fs_vpk_build "english" "client" "mp_rr_canyonlands_64k_x_64k" "1"
-fs_vpk_build "english" "client" "mp_rr_canyonlands_mu1" "1"
-fs_vpk_build "english" "client" "mp_rr_canyonlands_mu1_night" "1"
-fs_vpk_build "english" "client" "mp_rr_canyonlands_staging" "1"
-fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k" "1"
-fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k_nx" "1"
-fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k_tt" "1"
-fs_vpk_build "english" "client" "mp_rr_party_crasher" "1"
+fs_vpk_pack "english" "client" "frontend" "1"
+fs_vpk_pack "english" "client" "mp_common" "1"
+fs_vpk_pack "english" "client" "mp_rr_aqueduct" "1"
+fs_vpk_pack "english" "client" "mp_rr_aqueduct_night" "1"
+fs_vpk_pack "english" "client" "mp_rr_arena_composite" "1"
+fs_vpk_pack "english" "client" "mp_rr_arena_skygarden" "1"
+fs_vpk_pack "english" "client" "mp_rr_ashs_redemption" "1"
+fs_vpk_pack "english" "client" "mp_rr_canyonlands_64k_x_64k" "1"
+fs_vpk_pack "english" "client" "mp_rr_canyonlands_mu1" "1"
+fs_vpk_pack "english" "client" "mp_rr_canyonlands_mu1_night" "1"
+fs_vpk_pack "english" "client" "mp_rr_canyonlands_staging" "1"
+fs_vpk_pack "english" "client" "mp_rr_desertlands_64k_x_64k" "1"
+fs_vpk_pack "english" "client" "mp_rr_desertlands_64k_x_64k_nx" "1"
+fs_vpk_pack "english" "client" "mp_rr_desertlands_64k_x_64k_tt" "1"
+fs_vpk_pack "english" "client" "mp_rr_party_crasher" "1"
