--- a/r5dev/resource/cfg/tools/englishserver_build_vpk.cfg
+++ b/r5dev/resource/cfg/tools/englishserver_build_vpk.cfg
@@ -1,14 +1,14 @@
-fs_vpk_pack "english" "server" "mp_common" "1"
-fs_vpk_pack "english" "server" "mp_rr_aqueduct" "1"
-fs_vpk_pack "english" "server" "mp_rr_aqueduct_night" "1"
-fs_vpk_pack "english" "server" "mp_rr_arena_composite" "1"
-fs_vpk_pack "english" "server" "mp_rr_arena_skygarden" "1"
-fs_vpk_pack "english" "server" "mp_rr_ashs_redemption" "1"
-fs_vpk_pack "english" "server" "mp_rr_canyonlands_64k_x_64k" "1"
-fs_vpk_pack "english" "server" "mp_rr_canyonlands_mu1" "1"
-fs_vpk_pack "english" "server" "mp_rr_canyonlands_mu1_night" "1"
-fs_vpk_pack "english" "server" "mp_rr_canyonlands_staging" "1"
-fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k" "1"
-fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k_nx" "1"
-fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k_tt" "1"
-fs_vpk_pack "english" "server" "mp_rr_party_crasher" "1"
+fs_vpk_pack "english" "server" "mp_common"
+fs_vpk_pack "english" "server" "mp_rr_aqueduct"
+fs_vpk_pack "english" "server" "mp_rr_aqueduct_night"
+fs_vpk_pack "english" "server" "mp_rr_arena_composite"
+fs_vpk_pack "english" "server" "mp_rr_arena_skygarden"
+fs_vpk_pack "english" "server" "mp_rr_ashs_redemption"
+fs_vpk_pack "english" "server" "mp_rr_canyonlands_64k_x_64k"
+fs_vpk_pack "english" "server" "mp_rr_canyonlands_mu1"
+fs_vpk_pack "english" "server" "mp_rr_canyonlands_mu1_night"
+fs_vpk_pack "english" "server" "mp_rr_canyonlands_staging"
+fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k"
+fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k_nx"
+fs_vpk_pack "english" "server" "mp_rr_desertlands_64k_x_64k_tt"
+fs_vpk_pack "english" "server" "mp_rr_party_crasher"
