--- a/r5dev/rtech/CMakeLists.txt
+++ b/r5dev/rtech/CMakeLists.txt
@@ -3,9 +3,13 @@ add_module( "lib" "rtech_game" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 
 start_sources()
 
-add_sources( SOURCE_GROUP "Source"
+add_sources( SOURCE_GROUP "Private"
    "rtech_game.cpp"
    "rtech_game.h"
+)
+
+add_sources( SOURCE_GROUP "Public"
+   "${ENGINE_SOURCE_DIR}/public/rtech/ipakfile.h"
 )
 
 end_sources()
@@ -19,6 +23,12 @@ add_sources( SOURCE_GROUP "Source"
    "rtech_utils.h"
 )
 
+add_sources( SOURCE_GROUP "Public"
+   "${ENGINE_SOURCE_DIR}/public/rtech/ipakfile.h"
+)
+
+end_sources()
+
 add_module( "lib" "rui" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 
 start_sources()
@@ -27,6 +37,8 @@ add_sources( SOURCE_GROUP "Source"
    "rui/rui.cpp"
    "rui/rui.h"
 )
+
+end_sources()
 
 add_module( "lib" "stryder" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 
