Optimize CMaterialSystem::Init() for dedicated
Hook 'CMaterialSystem::Init()', and only load the 'startup.rpak' file, as that's all we need. This pak file might also not even be needed on the server, but removing this requires rebuilding 'common_early.rpak' to drop all texture/material assets and their references. The dedicated server is now also linked to a newly added 'No-DirectX' version of the materialsystem for patching.

--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -102,6 +102,7 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
 else()
 target_link_libraries( ${PROJECT_NAME} PRIVATE
     "engine_ds"
+    "materialsystem_nodx" # Needs the No-DirectX version for patching.
 )
 endif()
 
@@ -114,6 +115,7 @@ elseif( ${PROJECT_NAME} STREQUAL "dedicated" )
 end_sources()
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "DEDICATED"
+    "MATERIALSYSTEM_NODX" # Needs the No-DirectX version for patching.
 )
 elseif( ${PROJECT_NAME} STREQUAL "client" )
 end_sources( "${BUILD_OUTPUT_DIR}/bin/x64_retail/" )
