--- a/r5dev/materialsystem/CMakeLists.txt
+++ b/r5dev/materialsystem/CMakeLists.txt
@@ -19,3 +19,22 @@ add_sources( SOURCE_GROUP "Public"
 )
 
 end_sources()
+
+add_module( "lib" "materialsystem_nodx" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
+
+start_sources()
+
+add_sources( SOURCE_GROUP "Private"
+    "cmaterialsystem.cpp"
+    "cmaterialsystem.h"
+)
+
+add_sources( SOURCE_GROUP "Public"
+    "${ENGINE_SOURCE_DIR}/public/imaterialsystem.h"
+)
+
+end_sources()
+
+target_compile_definitions( ${PROJECT_NAME} PRIVATE
+    "MATERIALSYSTEM_NODX"
+)
